# graduation-project

./: factory.world  gazebo.run  livox_points_plugin.cpp  ori_init  sensor_info.cc  street_init  wall_init  yard_init  进度11_19.docx
a_mid70_vis/: model.config  my_model.sdf  my_model_for_vis.sdf
board_placement/: CMakeLists.txt  board_placement.cpp
calculate/: CMakeLists.txt  calculate.cc
gazebo_gui_spawn/: CMakeLists.txt  GUIExampleSpawnWidget.cc  GUIExampleSpawnWidget.hh
get_border/: CMakeLists.txt
lidar360/: model.sdf
print_sensor_info/: CMakeLists.txt
projet_src/gazebo_gui_spawn/: GUIExampleSpawnWidget.cc  GUIExampleSpawnWidget.hh  gazebo_init.cpp
projet_src/get_border/: get_border.cc
projet_src/ginfo/: CMakeLists.txt  get_info.sdf  ginfo.cc
projet_src/launcher/: my_gazebo_launcher.cpp
projet_src/print_sensor_info/: print_sensor_info.cc
projet_src/sensor_info/: sensor_info.cc
projet_src/worldpublish/: CMakeLists.txt  factory.world
sensor_info/: CMakeLists.txt  sensor_info.cc
test_src/: GUIExampleSpawnWidget.cc  GUIExampleSpawnWidget.hh  init  init.cpp
worldpublish/: factory.cc
worlds/: ori.world  street.world  wall.world  yard.world
